2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio-alsa.cpp: If hw setup failed, dump current hw parameters
	to stdout (if debug mode is enabled).

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Do better initialization and cleanup of
	downloader and state variables to prevent issues when seeking.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Write: Don't use math when not necessary to
	avoid overflows, and if we end up freeing the buffer set the size
	accordingly.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Use thread-safe tick call from media thread.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp: Don't leak the uri.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* downloader.h: Make OpenInitialize public so that the
	MmsDownloader can reinitialize it when sending new requests.

2009-06-26  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Play 24 bit audio unconditionally.

2009-07-01  Chris Toshok  <toshok@ximian.com>

	* Makefile.am (INCLUDES): turns out we need to include ../plugin
	here to deal with type-generated/type.h/etc.

	* type.h.in: fix annoying indent problem.

	* cbinding.h, dependencyproperty.g.cpp, type-generated.cpp,
	value.h, type.h: regen

2009-07-01  Larry Ewing  <lewing@novell.com>

	* textblock.cpp (ArrangeOverride): take alignment into account
	when computing our size.

2009-07-01  Jeffrey Stedfast  <fejj@novell.com>

	* textblock.cpp (ArrangeOverride): Set the available width on the
	layout so that it can properly align the text for center/right
	alignment.

2009-07-01  Jackson Harper  <jackson@ximian.com>

	* xaml.cpp: Need to set the binding source when we are validating
	templates.

2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mediaelement.cpp: SetMarkerTimeout: when unreffing self
	use a delayed timeout, since we can be the last ref, this