@@ -1,5 +1,11 @@
 2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* audio-alsa.cpp: WriteMmap: If we try to write with an audio
+	source which has ended, call Underflowed, since that's what's
+	happened.
+
+2009-07-01  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* audio-alsa.cpp: If hw setup failed, dump current hw parameters
 	to stdout (if debug mode is enabled).
 
